<resources>
    <string name="app_name">kospen5Ui_TEST</string>
    <string name="element_text">Element</string>

    <!--String values for App Bar-->
    <string name="action_favorite">Favourite</string>
    <string name="action_settings">Settings</string>

    <!--String values for Floating-Label-for-EditText-->
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_age">Age</string>
    <string name="hint_password">Password</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Sign Up Successful</string>

    <!--String values for Birthday DatePickerDialog in EditText-->
    <string name="hint_birthday">Pick a Date</string>

    <!--String values for Gender menu in EditText-->
    <string name="hint_gender">Gender</string>
    <string name="menu_male">Male</string>
    <string name="menu_female">Female</string>

    <!--StringArray values for Spinner-->
    <string-array name="android_layout_arrays">
        <item>Choose a Layout</item>
        <item>LinearLayout</item>
        <item>RelativeLayout</item>
        <item>FrameLayout</item>
        <item>TableLayout</item>
        <item>AbsoluteLayout</item>
        <item>GridLayout</item>
    </string-array>

</resources>
