<?xml version="1.0" encoding="utf-8"?>
<!-- VERSION 2: adding Floating-Label-for-EditText to New-Kospenuser-Form -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <!--tools:context="com.androidtutorialshub.floatinglabels.MainActivity">-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_full_name"
            android:inputType="text"
            android:singleLine="true"
            android:focusable="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <!--BEGIN - adding DatePickerDialog in EditText-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_birthday"
            android:focusable="false"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <!--END - adding DatePickerDialog in EditText-->

    <!--BEGIN - adding Menu-Gender in EditText-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_gender"
            android:focusable="false"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <!--END - adding Menu-Gender in EditText-->

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin_top"
        android:background="@color/colorPrimary"
        android:text="@string/text_sign_up"
        android:textColor="@android:color/white" />
</LinearLayout>



<!-- VERSION 1: used when making 'tabs' with TabLayout & ViewPager -->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="match_parent"-->
    <!--android:background="#0288D1"-->
<!--android:layout_height="match_parent">-->
    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Fragment Two"-->
    <!--android:textSize="40dp"-->
    <!--android:textStyle="bold"-->
    <!--android:textColor="#fff"-->
    <!--android:layout_centerInParent="true"/>-->
<!--</RelativeLayout>-->